--- a/index.html
+++ b/index.html
@@ -32,16 +32,19 @@
 
         <ul class="projectBlock block1">
             <li>
+                <a href="project_share.html"><img src="images/project_share.png"</a>
+            </li>
+            <li>
                 <a href="project_goSomewhere.html"><img src="images/project_goSomewhere.jpg"></a>
             </li>
             <li>
                 <a href="project_darkerLight.html"><img src="images/project_darkerLight.jpg"></a>
             </li>
             <li>
-                <a href="project_bizcards.html"><img src="images/project_bizcards.png"></a>
+                <a href="project_i2m.html"><img src="images/project_i2m.png"></a>
             </li>
             <li>
-                <a href="project_i2m.html"><img src="images/project_i2m.png"></a>
+                <a href="project_bizcards.html"><img src="images/project_bizcards.png"></a>
             </li>
             <li>
                 <a href="project_costOfLiving.html"><img src="images/project_costOfLiving.jpg"></a>
